# SHL-AI-Intern-RE-Generative-AI-assignment

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  SECURITY_SETUP.md  app.py  create_complete_submission.py  create_final_submission.py  create_submission_csv.py  deploy_production.py  docker-compose.prod.yml  docker-compose.yml  generate_submission.py  process_scraped_data.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_training_evaluation.py  start.py  test.html  vercel.json  verify_deployment.py
.github/workflows/: deploy.yml
.kiro/specs/shl-generative-ai-project/: design.md  requirements.md  tasks.md
deployment/: README.md
deployment/gcp/: cloudbuild.yaml  deploy-api.sh  deploy-frontend.sh  deploy.sh  setup-domain.sh
deployment/gcp/terraform/: main.tf  terraform.tfvars.example
docs/: README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/: globe-animation.json  index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx  index.css  index.tsx  main.tsx  setupTests.ts
frontend/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx  QueryInput.tsx  RecommendationTable.tsx
frontend/src/components/__tests__/: ErrorBoundary.test.tsx  LoadingSpinner.test.tsx  QueryInput.test.tsx  RecommendationTable.test.tsx
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/types/: index.ts
src/: __init__.py  config.py  config_lite.py
src/api/: __init__.py  lightweight_main.py  main.py  models.py
src/evaluation/: __init__.py  evaluation_engine.py  metrics_calculator.py  optimization_pipeline.py  performance_tracker.py  training_evaluation.py
src/processing/: __init__.py  assessment_processor.py  embedding_generator.py  vector_database.py
src/recommendation/: __init__.py  balanced_ranker.py  query_processor.py  recommendation_engine.py
src/scraper/: README.md  __init__.py  shl_catalog_scraper.py
tests/: test_setup.py
